# DentaCRM

./: .env.example  .gitignore  AGENTS.md  PROJECT_BRIEF.md  README.md  agentloop.toml  agentloop.toml.example  loyiha_haqida.md  push_project.sh  pyproject.toml
.agentloop/runs/20260704_133936/: context_store.json  effective_config.json  metrics.json  preflight.json  run_state.json  summary.json
.github/workflows/: ci.yml
.kiro/agents/: ai-builder.json  ai-planner.json  ai-reviewer.json
.kiro/steering/: orchestration.md  runner_lifecycle.md
ai_orchestrator/: __init__.py  context_store.py  dashboard.py  orchestrator.py  telegram_notifier.py
dentacrm/: .env.example  .env.prod.example  .gitignore  DIZAYN_HUJJAT.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
dentacrm/backend/: .dockerignore  .env.example  Dockerfile  README.md  check_db.py  find_template.py  manage.py  pyproject.toml  pytest.ini
dentacrm/backend/apps/: __init__.py
dentacrm/backend/config/: __init__.py  asgi.py  celery.py  (+2 more)
dentacrm/frontend/: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  Dockerfile  Dockerfile.prod  README.md  index.html  nginx.conf  package-lock.json  package.json  placeholder-server.mjs  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.setup.ts
dentacrm/scripts/: init-postgres.sql
dentacrm_design/: README.md  metadata.json
dentacrm_design/src/: App.tsx  index.css  types.ts
examples/todo_app/: PROJECT_BRIEF.md  agentloop.toml
prompts/: continue_codex.md  discovery_kiro.md  replan_kiro.md  review_kiro.md
(+472 files in other folders)
