[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentloop"
version = "0.1.0"
description = "AI Agent Orchestrator — automated build-review-plan loop with Kiro CLI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Baxrom", email = "baxrom@example.com" }]

dependencies = []

[project.optional-dependencies]
telegram = ["httpx>=0.27.0"]
dashboard = ["fastapi>=0.115.0", "uvicorn>=0.32.0"]
all = ["agentloop[telegram,dashboard]"]

[project.scripts]
agentloop = "ai_orchestrator.orchestrator:main"

[tool.hatch.build.targets.wheel]
packages = ["ai_orchestrator"]
